# eightwords

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  conanfile.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
data/: calendar.db
include/: calendar.h  calendar_cal2.h  calendar_calc.h  calendar_type.h  calender_calc.h  eightwords.h  eightwords_type.h  face_converter.h
src/: calendar.cpp  calendar_cal2.cpp  calendar_calc.cpp  calender_calc.cpp  eightwords.cpp  face_converter.cpp  main.cpp  test.cpp
test/: calendar.cpp  calendar.h  test.cpp
